--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Cashier</title>
-    <base href="/"/> 
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="logo.png"/>
-    <link rel="manifest" href="manifest.webmanifest"/>
-    <link rel="manifest" href="manifest.webmanifest"/>
-    <link rel="manifest" href="manifest.webmanifest">
-</head>
+    <base href="./" /> 
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="logo.png" />
+    <link rel="manifest" href="manifest.webmanifest" />
+    <link rel="manifest" href="manifest.webmanifest" />
+  </head>
   <body>
     <app-root></app-root>
 
-    <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <noscript
+      >Please enable JavaScript to continue using this application.</noscript
+    >
   </body>
 </html>
